--- a/app/views/pages/thief.html.slim
+++ b/app/views/pages/thief.html.slim
@@ -1,2 +1,1 @@
-/ iframe src="http://nicklally.com" id="stealframe" style="width:100%; height:100%; border:0; margin: 0; padding: 0;"
-== @src
+== pull_site @target
