--- a/app/views/user_mailer/activation_needed_email.html.erb
+++ b/app/views/user_mailer/activation_needed_email.html.erb
@@ -4,9 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to Roguegallery, <%= @user.email %></h1>
+    <h1>Welcome to StoleThis, <%= @user.email %></h1>
     <p>
-      You have successfully signed up to roguegallery.herokuapp.com,
+      You have successfully signed up to stolethis.herokuapp.com,
       your username is: <%= @user.email %>.<br/>
     </p>
     <p>
