--- a/app/views/user_mailer/activation_success_email.text.erb
+++ b/app/views/user_mailer/activation_success_email.text.erb
@@ -1,7 +1,7 @@
 Congratulations, <%= @user.email %>!
 ===============================================
  
-You have successfully activated your Roguegallery account,
+You have successfully activated your StoleThis account,
 your username is: <%= @user.email %>.
  
 Go ahead and sign in to the site: <%= sign_in_url %>
